syntax = "proto3";

option java_package = "com.huanchengfly.tieba.post.models.protos";

message PhotoViewData {
  optional LoadPicPageData data = 2;
  repeated PicItem picItems = 3;
  uint32 index = 4;
}

message LoadPicPageData {
  int64 forumId = 1;
  string forumName = 2;
  bool seeLz = 3;
  string objType = 4;
  string picId = 5;
  uint32 picIndex = 6;
  int64 postId = 7;
  int64 threadId = 8;
  optional string originUrl = 9;
}

message PicItem {
  string picId = 1;
  uint32 picIndex = 2;
  string url = 3;
  string originUrl = 4;
  bool showOriginBtn = 5;
  uint32 originSize = 6;
}